// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders message box when commenting disabled 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
  role="tabpanel"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignCenter gutter"
    >
      <button
        className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        type="button"
      >
        Sign in
      </button>
      <button
        className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantOutlined"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        type="button"
      >
        Register
      </button>
    </div>
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-double"
    >
      <div
        className="CallOut-root CallOut-colorRegular CallOut-fullWidth PostCommentFormClosedSitewide-root"
      >
        <div>
          <div
            className="Markdown-root PostCommentFormClosedSitewide-message"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Commenting disabled</p>
",
              }
            }
          />
        </div>
      </div>
      <div
        className="MessageBox-root"
      >
        <span
          aria-hidden="true"
          className="Icon-root Icon-md MessageBoxIcon-root"
        >
          chat
        </span>
        <div
          className="Markdown-root MessageBoxContent-root"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p><strong>What do you think</strong>?</p>
",
            }
          }
        />
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <div
        className="Box-root Flex-root StreamContainer-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
      >
        <label
          className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary"
          htmlFor="coral-comments-sortMenu"
        >
          Sort By
        </label>
        <span
          className="SelectField-root"
        >
          <select
            className="SelectField-select undefined"
            id="coral-comments-sortMenu"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value="CREATED_AT_DESC"
          >
            <option
              value="CREATED_AT_DESC"
            >
              Newest
            </option>
            <option
              value="CREATED_AT_ASC"
            >
              Oldest
            </option>
            <option
              value="REPLIES_DESC"
            >
              Most Replies
            </option>
            <option
              value="REACTION_DESC"
            >
              Most Respected
            </option>
          </select>
          <span
            aria-hidden={true}
            className="SelectField-afterWrapper undefined"
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              expand_more
            </span>
          </span>
        </span>
      </div>
      <ul
        className="TabBar-root TabBar-secondary"
        role="tablist"
      >
        <li
          className="Tab-root"
          id="tab-ALL_COMMENTS"
          role="presentation"
        >
          <button
            aria-controls="tabPane-ALL_COMMENTS"
            aria-selected={true}
            className="BaseButton-root Tab-button Tab-secondary Tab-active"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            role="tab"
            type="button"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
            >
              <span>
                All Comments
              </span>
              <span
                className="Counter-root Counter-colorPrimary Counter-sizeSmall"
              >
                <span
                  className="Counter-text"
                >
                  0
                </span>
              </span>
            </div>
          </button>
        </li>
      </ul>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        id="tabPane-ALL_COMMENTS"
        role="tabpanel"
      >
        <div
          aria-live="polite"
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
          data-testid="comments-allComments-log"
          id="comments-allComments-log"
          role="log"
        />
      </section>
    </div>
  </div>
</section>
`;

exports[`renders message box when logged in 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
  role="tabpanel"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root"
    >
      <div
        className="Flex-flex Flex-halfItemGutter Flex-wrap gutter"
      >
        <div
          className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary"
        >
          Signed in as 
          <span
            className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary"
          >
            Markus
          </span>
          .
        </div>
        <div
          className="Box-root Flex-root Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary Flex-flex"
        >
          <span>
            Not you? 
          </span>
          <button
            className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign Out
          </button>
        </div>
      </div>
    </div>
    <div>
      <div
        className="MessageBox-root PostCommentForm-messageBox"
      >
        <span
          aria-hidden="true"
          className="Icon-root Icon-md MessageBoxIcon-root"
        >
          chat
        </span>
        <div
          className="Markdown-root MessageBoxContent-root"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p><strong>What do you think</strong>?</p>
",
            }
          }
        />
      </div>
      <form
        autoComplete="off"
        className="coral coral-createComment"
        id="comments-postCommentForm-form"
        onSubmit={[Function]}
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
        >
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-half"
          >
            <label
              className="AriaInfo-root"
              htmlFor="comments-postCommentForm-field"
            >
              Post a comment
            </label>
            <div>
              <div
                className="coral coral-createComment-box"
              >
                <div
                  className="RTE-contentEditableContainer"
                >
                  <div
                    aria-placeholder="Post a comment"
                    className="RTE-contentEditable RTE-content"
                    contentEditable={true}
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "",
                      }
                    }
                    disabled={false}
                    id="comments-postCommentForm-field"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCut={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    onPaste={[Function]}
                    onSelect={[Function]}
                  />
                  <div
                    aria-hidden="true"
                    className="RTE-placeholder RTE-placeholder"
                  >
                    Post a comment
                  </div>
                </div>
                <div
                  className="RTE-toolbar RTE-toolbarBottom Toolbar-toolbar"
                >
                  <button
                    className="Button-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Bold"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-md"
                    >
                      format_bold
                    </span>
                  </button>
                  <button
                    className="Button-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Italic"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-md"
                    >
                      format_italic
                    </span>
                  </button>
                  <button
                    className="Button-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Blockquote"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      className="Icon-root Icon-md"
                    >
                      format_quote
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="Box-root Flex-root Flex-flex Flex-alignFlexEnd Flex-directionColumn"
          >
            <button
              className="BaseButton-root Button-root coral coral-createComment-submit Button-sizeRegular Button-colorPrimary Button-variantFilled Button-disabled"
              disabled={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <div
        className="Box-root Flex-root StreamContainer-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
      >
        <label
          className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary"
          htmlFor="coral-comments-sortMenu"
        >
          Sort By
        </label>
        <span
          className="SelectField-root"
        >
          <select
            className="SelectField-select undefined"
            id="coral-comments-sortMenu"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value="CREATED_AT_DESC"
          >
            <option
              value="CREATED_AT_DESC"
            >
              Newest
            </option>
            <option
              value="CREATED_AT_ASC"
            >
              Oldest
            </option>
            <option
              value="REPLIES_DESC"
            >
              Most Replies
            </option>
            <option
              value="REACTION_DESC"
            >
              Most Respected
            </option>
          </select>
          <span
            aria-hidden={true}
            className="SelectField-afterWrapper undefined"
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              expand_more
            </span>
          </span>
        </span>
      </div>
      <ul
        className="TabBar-root TabBar-secondary"
        role="tablist"
      >
        <li
          className="Tab-root"
          id="tab-ALL_COMMENTS"
          role="presentation"
        >
          <button
            aria-controls="tabPane-ALL_COMMENTS"
            aria-selected={true}
            className="BaseButton-root Tab-button Tab-secondary Tab-active"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            role="tab"
            type="button"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
            >
              <span>
                All Comments
              </span>
              <span
                className="Counter-root Counter-colorPrimary Counter-sizeSmall"
              >
                <span
                  className="Counter-text"
                >
                  0
                </span>
              </span>
            </div>
          </button>
        </li>
      </ul>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        id="tabPane-ALL_COMMENTS"
        role="tabpanel"
      >
        <div
          aria-live="polite"
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
          data-testid="comments-allComments-log"
          id="comments-allComments-log"
          role="log"
        />
      </section>
    </div>
  </div>
</section>
`;

exports[`renders message box when not logged in 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
  role="tabpanel"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignCenter gutter"
    >
      <button
        className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        type="button"
      >
        Sign in
      </button>
      <button
        className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantOutlined"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        type="button"
      >
        Register
      </button>
    </div>
    <div
      className="coral coral-createComment"
    >
      <div
        className="MessageBox-root PostCommentFormFake-messageBox"
      >
        <span
          aria-hidden="true"
          className="Icon-root Icon-md MessageBoxIcon-root"
        >
          chat
        </span>
        <div
          className="Markdown-root MessageBoxContent-root"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p><strong>What do you think</strong>?</p>
",
            }
          }
        />
      </div>
      <div
        className="Box-root HorizontalGutter-root PostCommentFormFake-root HorizontalGutter-full"
      >
        <div
          aria-hidden="true"
          className="coral coral-createComment-box"
        >
          <div>
            <div
              className=""
            >
              <div
                className="RTE-contentEditableContainer"
              >
                <div
                  aria-placeholder="Post a comment"
                  className="RTE-contentEditable RTE-content"
                  contentEditable={true}
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "",
                    }
                  }
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCut={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  onPaste={[Function]}
                  onSelect={[Function]}
                />
                <div
                  aria-hidden="true"
                  className="RTE-placeholder RTE-placeholder"
                >
                  Post a comment
                </div>
              </div>
              <div
                className="RTE-toolbar RTE-toolbarBottom Toolbar-toolbar"
              >
                <button
                  className="Button-button"
                  disabled={false}
                  onClick={[Function]}
                  title="Bold"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-md"
                  >
                    format_bold
                  </span>
                </button>
                <button
                  className="Button-button"
                  disabled={false}
                  onClick={[Function]}
                  title="Italic"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-md"
                  >
                    format_italic
                  </span>
                </button>
                <button
                  className="Button-button"
                  disabled={false}
                  onClick={[Function]}
                  title="Blockquote"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-md"
                  >
                    format_quote
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <button
          className="BaseButton-root Button-root coral coral-createComment-signIn Button-sizeRegular Button-colorPrimary Button-variantFilled Button-fullWidth"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Sign in and Join the Conversation
        </button>
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <div
        className="Box-root Flex-root StreamContainer-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
      >
        <label
          className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary"
          htmlFor="coral-comments-sortMenu"
        >
          Sort By
        </label>
        <span
          className="SelectField-root"
        >
          <select
            className="SelectField-select undefined"
            id="coral-comments-sortMenu"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value="CREATED_AT_DESC"
          >
            <option
              value="CREATED_AT_DESC"
            >
              Newest
            </option>
            <option
              value="CREATED_AT_ASC"
            >
              Oldest
            </option>
            <option
              value="REPLIES_DESC"
            >
              Most Replies
            </option>
            <option
              value="REACTION_DESC"
            >
              Most Respected
            </option>
          </select>
          <span
            aria-hidden={true}
            className="SelectField-afterWrapper undefined"
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              expand_more
            </span>
          </span>
        </span>
      </div>
      <ul
        className="TabBar-root TabBar-secondary"
        role="tablist"
      >
        <li
          className="Tab-root"
          id="tab-ALL_COMMENTS"
          role="presentation"
        >
          <button
            aria-controls="tabPane-ALL_COMMENTS"
            aria-selected={true}
            className="BaseButton-root Tab-button Tab-secondary Tab-active"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            role="tab"
            type="button"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
            >
              <span>
                All Comments
              </span>
              <span
                className="Counter-root Counter-colorPrimary Counter-sizeSmall"
              >
                <span
                  className="Counter-text"
                >
                  0
                </span>
              </span>
            </div>
          </button>
        </li>
      </ul>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        id="tabPane-ALL_COMMENTS"
        role="tabpanel"
      >
        <div
          aria-live="polite"
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
          data-testid="comments-allComments-log"
          id="comments-allComments-log"
          role="log"
        />
      </section>
    </div>
  </div>
</section>
`;

exports[`renders message box when story isClosed 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
  role="tabpanel"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-alignCenter gutter"
    >
      <button
        className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        type="button"
      >
        Sign in
      </button>
      <button
        className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantOutlined"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        type="button"
      >
        Register
      </button>
    </div>
    <div>
      <div
        className="MessageBox-root PostCommentFormClosed-messageBox"
      >
        <div
          className="Markdown-root MessageBoxContent-root"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p><strong>What do you think</strong>?</p>
",
            }
          }
        />
      </div>
      <div
        className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
      >
        <div>
          <div
            className="Markdown-root"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Story is closed</p>
",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <div
        className="Box-root Flex-root StreamContainer-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
      >
        <label
          className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary"
          htmlFor="coral-comments-sortMenu"
        >
          Sort By
        </label>
        <span
          className="SelectField-root"
        >
          <select
            className="SelectField-select undefined"
            id="coral-comments-sortMenu"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value="CREATED_AT_DESC"
          >
            <option
              value="CREATED_AT_DESC"
            >
              Newest
            </option>
            <option
              value="CREATED_AT_ASC"
            >
              Oldest
            </option>
            <option
              value="REPLIES_DESC"
            >
              Most Replies
            </option>
            <option
              value="REACTION_DESC"
            >
              Most Respected
            </option>
          </select>
          <span
            aria-hidden={true}
            className="SelectField-afterWrapper undefined"
          >
            <span
              aria-hidden="true"
              className="Icon-root Icon-sm"
            >
              expand_more
            </span>
          </span>
        </span>
      </div>
      <ul
        className="TabBar-root TabBar-secondary"
        role="tablist"
      >
        <li
          className="Tab-root"
          id="tab-ALL_COMMENTS"
          role="presentation"
        >
          <button
            aria-controls="tabPane-ALL_COMMENTS"
            aria-selected={true}
            className="BaseButton-root Tab-button Tab-secondary Tab-active"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            role="tab"
            type="button"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
            >
              <span>
                All Comments
              </span>
              <span
                className="Counter-root Counter-colorPrimary Counter-sizeSmall"
              >
                <span
                  className="Counter-text"
                >
                  0
                </span>
              </span>
            </div>
          </button>
        </li>
      </ul>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        id="tabPane-ALL_COMMENTS"
        role="tabpanel"
      >
        <div
          aria-live="polite"
          className="Box-root HorizontalGutter-root HorizontalGutter-full"
          data-testid="comments-allComments-log"
          id="comments-allComments-log"
          role="log"
        />
      </section>
    </div>
  </div>
</section>
`;
